--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "mongoose": "^5.1.6",
     "morgan": "^1.9.0",
     "nodemon": "^1.17.5"
   }
